--- a/src/kintone-autokana/html/config.html
+++ b/src/kintone-autokana/html/config.html
@@ -1,24 +1,34 @@
 <div>
   <div class="block">
-    <label class="kintoneplugin-label">
-      <span id="container_label">漢字フィールドコード</span>
-      <span class="kintoneplugin-require">*</span>
-    </label>
-    <div class="kintoneplugin-row">漢字フィールドコード</div>
-      <div class="kintoneplugin-input-outer">
-        <input id="kanji_field" class="kintoneplugin-input-text"></input>
-     </div>
+    <div class="kintoneplugin-row">
+      <label class="kintoneplugin-label">
+        <span>漢字フィールド</span>
+        <span class="kintoneplugin-require">*</span>
+      </label>
+      <div class="kintoneplugin-select-outer">
+        <div class="kintoneplugin-select">
+          <select id="kanji_label_0">
+            <option value="">--</option>
+          </select>
+        </div>
+      </div>
+    </div>
+
+    <div class="kintoneplugin-row">
+      <label class="kintoneplugin-label">
+        <span>かなフィールド</span>
+        <span class="kintoneplugin-require">*</span>
+      </label>
+      <div class="kintoneplugin-select-outer">
+        <div class="kintoneplugin-select">
+          <select id="kana_label_0">
+            <option value="">--</option>
+          </select>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="block">
-    <label class="kintoneplugin-label">
-      <span id="container_label">かなフィールドコード</span>
-      <span class="kintoneplugin-require">*</span>
-    </label>
-    <div class="kintoneplugin-row">かなフィールドコード</div>
-     <div class="kintoneplugin-input-outer">
-      <input id="kana_field" class="kintoneplugin-input-text"></input>
-     </div>
-  </div>
+
   <div class="block">
     <button type="button" id="submit" class="kintoneplugin-button-dialog-ok">保存</button>
     <button type="button" id="cancel" class="kintoneplugin-button-dialog-cancel">キャンセル</button>
