--- a/src/html/config.html
+++ b/src/html/config.html
@@ -1,35 +1,83 @@
 <div class="plugin-config">
   <div class="block">
-    <div class="kintoneplugin-row">
-
-      <label class="kintoneplugin-label">
-        <span>漢字フィールド</span>
-        <span class="kintoneplugin-require">*</span>
-      </label>
-      <div class="kintoneplugin-select-outer">
-        <div class="kintoneplugin-select">
-          <select id="kanji_label_0">
-            <option value="">--</option>
-          </select>
-        </div>
-      </div>
-      <label class="kintoneplugin-label">
-        <span>かなフィールド</span>
-        <span class="kintoneplugin-require">*</span>
-      </label>
-
-    </div>
-
-    <div class="kintoneplugin-row">
-      <div class="kintoneplugin-select-outer">
-        <div class="kintoneplugin-select">
-          <select id="kana_label_0">
-            <option value="">--</option>
-          </select>
-        </div>
-      </div>
-    </div>
-  </div>
+    <table class="kintoneplugin-table">
+      <tbody>
+        <tr class="kintoneplugin-tr">
+          <th class="kintoneplugin-th">
+            <span>漢字フィールド</span>
+            <span class="kintoneplugin-require">*</span>
+          </th>
+          <th class="kintoneplugin-th">
+            <span>かなフィールド</span>
+            <span class="kintoneplugin-require">*</span>
+          </th>
+        </tr>
+        <tr class="kintoneplugin-tr">
+          <td class="kintoneplugin-td">
+            <div class="kintoneplugin-select-outer">
+              <select name="kanji_label_0" class="kintoneplugin-select">
+                <option value="">--</option>
+              </select>
+            </div>
+          </td>
+          <td class="kintoneplugin-td">
+            <div class="kintoneplugin-select-outer">
+              <select name="kana_label_0" class="kintoneplugin-select">
+                <option value="">--</option>
+              </select>
+            </div>
+          </td>
+        </tr>
+        <tr class="kintoneplugin-tr">
+          <td class="kintoneplugin-td">
+            <div class="kintoneplugin-select-outer">
+              <select name="kanji_label_1" class="kintoneplugin-select">
+                <option value="">--</option>
+              </select>
+            </div>
+          </td>
+          <td class="kintoneplugin-td">
+            <div class="kintoneplugin-select-outer">
+              <select name="kana_label_1" class="kintoneplugin-select">
+                <option value="">--</option>
+              </select>
+            </div>
+          </td>
+        </tr>
+        <tr class="kintoneplugin-tr">
+          <td class="kintoneplugin-td">
+            <div class="kintoneplugin-select-outer">
+              <select name="kanji_label_2" class="kintoneplugin-select">
+                <option value="">--</option>
+              </select>
+            </div>
+          </td>
+          <td class="kintoneplugin-td">
+            <div class="kintoneplugin-select-outer">
+              <select name="kana_label_2" class="kintoneplugin-select">
+                <option value="">--</option>
+              </select>
+            </div>
+          </td>
+        </tr>
+        <tr class="kintoneplugin-tr">
+          <td class="kintoneplugin-td">
+            <div class="kintoneplugin-select-outer">
+              <select name="kanji_label_3" class="kintoneplugin-select">
+                <option value="">--</option>
+              </select>
+            </div>
+          </td>
+          <td class="kintoneplugin-td">
+            <div class="kintoneplugin-select-outer">
+              <select name="kana_label_3" class="kintoneplugin-select">
+                <option value="">--</option>
+              </select>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
   <div class="block">
     <button type="button" id="submit" class="kintoneplugin-button-dialog-ok">保存</button>
